--- a/SearchWebApp/Components/Layout/NavMenu.razor
+++ b/SearchWebApp/Components/Layout/NavMenu.razor
@@ -1,6 +1,9 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">SearchWebApp</a>
+        <a class="navbar-brand" href="">
+            <i class="bi bi-search me-2"></i>
+            <strong>SearchEngine</strong>
+        </a>
     </div>
 </div>
 
@@ -10,7 +13,7 @@
     <nav class="nav flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <span class="bi bi-search-nav-menu" aria-hidden="true"></span> Search
             </NavLink>
         </div>
     </nav>
