--- a/SearchWebApp/Components/Layout/MainLayout.razor
+++ b/SearchWebApp/Components/Layout/MainLayout.razor
@@ -1,12 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <article class="content px-4">
+    <main class="w-100">
+        <article class="content">
             @Body
         </article>
     </main>
